Fix default filter selection when using HideNameFilterDetails option.

When you have HideNameFilterDetails on, comparing the default filter
given in parameter for selectNameFilter has to be done with the striped
version of the filter, i.e. without the details.

Task-number:QTBUG-4842
Reviewed-by:gabriel
Reviewed-by:olivier